Fixed bug #14564: Width of one text paragraph in the Install Tool is too big (Thanks to Marc Wöhlken)
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@9816 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/sysext/install/Resources/Public/Stylesheets/install.css
+++ b/typo3/sysext/install/Resources/Public/Stylesheets/install.css
@@ -188,6 +188,10 @@ h1,
 }
 
 /* 5: All configuration */
+.t3-install-description {
+	word-wrap: break-word;
+	width: 48em;
+}
 
 /* 6: typo3temp/ */
 #t3-install-tempmanagernumbers dt {
